fix: library search UI fixes/tweaks (#10032)
* fix library icon height in command palette

* add clear button when no results

--- a/locales/en.json
+++ b/locales/en.json
@@ -185,7 +185,8 @@
     "search": {
       "inputPlaceholder": "Search library",
       "heading": "Library matches",
-      "noResults": "No matching items found..."
+      "noResults": "No matching items found...",
+      "clearSearch": "Clear search"
     }
   },
   "search": {
